# project-lumina

./: .coverage  .env.example  .gitignore  =23.1.0  GOVERNANCE.md  README.md  _debug_hang.py  coverage.json  domain-registry.yaml  domain_test_output.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  results.txt  test_out2.txt  test_out_registry.txt  test_regression_output.txt  test_run_fresh.txt
.github/: FUNDING.yml  pull_request_template.md
cfg/: domain-registry.yaml  system-physics.json  system-physics.yaml  system-runtime-config.yaml
docs/: MANIFEST.yaml  README.md
domain-packs/: README.md
examples/: README.md  casual-learning-trace-example.json  escalation-example-packet.yaml
front-end/: app.tsx  package-lock.json  package.json  vitest.config.ts
governance/: audit-and-rollback.md  domain-authority-roles.md  meta-authority-policy-template.yaml
ledger/: casual-trace-ledger-schema-v1.json  commitment-record-schema.json  escalation-record-schema.json  trace-event-schema.json
reference-implementations/: README.md  check-local-secret-hygiene.ps1  ctl-commitment-validator.py  domain_registry.py  dsa-orchestrator-demo.py  dsa-orchestrator.py  filesystem_persistence.py  lumina-api-server.py  persistence_adapter.py  run-full-verification.ps1  run-preintegration-scenarios.ps1  runtime_loader.py  sqlite_persistence.py  verify-repo-integrity.py  yaml-loader.py  yaml-to-json-converter.py  zpd-monitor-demo.py  zpd-monitor-v0.2.py
retrieval/: rag-contracts.md  retrieval-index-schema-v1.json
scripts/: run-full-verification.ps1  seed-system-physics-ctl.ps1  seed-system-physics-log.ps1  seed-system-physics-log.sh
src/web/: app.tsx  (+1 more)
(+493 files in other folders)
