[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "project-lumina"
version = "0.1.0"
description = "Deterministic orchestration around a probabilistic LLM"
readme = "README.md"
requires-python = ">=3.12, <3.15"
license = { text = "Apache-2.0" }
authors = [
  { name = "Project Lumina Contributors" }
]
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.18",
  "pyyaml>=6.0.0"
]

[project.optional-dependencies]
providers = [
  "openai>=1.0.0",
  "anthropic>=0.34.0"
]
sqlite = [
  "sqlalchemy[asyncio]>=2.0.0",
  "aiosqlite>=0.20.0"
]
nlp = [
  "spacy>=3.7.0"
]
math = [
  "sympy>=1.12"
]
retrieval = [
  "sentence-transformers>=3.0.0",
  "numpy>=1.26.0"
]
passwords = [
  "bcrypt>=4.0.0",
  "argon2-cffi>=23.1.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "jsonschema>=4.20.0",
  "project-lumina[sqlite,passwords]"
]

[project.scripts]
lumina-api = "lumina.cli.cli:api"
lumina-verify = "lumina.cli.cli:verify"
lumina-orchestrator-demo = "lumina.cli.cli:orchestrator_demo"
lumina-system-log-validate = "lumina.cli.cli:system_log_validate"
lumina-security-freeze = "lumina.cli.cli:security_freeze"
lumina-yaml-convert = "lumina.cli.cli:yaml_convert"
lumina-integrity-check = "lumina.cli.cli:integrity_check"
lumina-manifest-regen = "lumina.cli.cli:manifest_regen"

[tool.hatch.build.targets.wheel]
packages = ["src/lumina"]

[tool.coverage.run]
omit = [
    "*/systools/dsa_demo.py",
]
